pod-security-vpol/restricted/require-run-as-non-root-user/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-run-as-non-root-user
policies:
- ../require-run-as-non-root-user.yaml
resources:
- resource.yaml
results:
- isValidatingPolicy: true
  kind: CronJob
  policy: require-run-as-non-root-user
  resources:
  - badcronjob01
  - badcronjob02
  - badcronjob03
  - badcronjob04
  - badcronjob05
  - badcronjob06
  - badcronjob07
  - badcronjob08
  - badcronjob09
  result: fail
- isValidatingPolicy: true
  kind: Deployment
  policy: require-run-as-non-root-user
  resources:
  - baddeployment01
  - baddeployment02
  - baddeployment03
  - baddeployment04
  - baddeployment05
  - baddeployment06
  - baddeployment07
  - baddeployment08
  - baddeployment09
  result: fail
- isValidatingPolicy: true
  kind: Pod
  policy: require-run-as-non-root-user
  resources:
  - badpod01
  - badpod02
  - badpod03
  - badpod04
  - badpod05
  - badpod06
  - badpod07
  - badpod08
  - badpod09
  - badpod10
  result: fail
- isValidatingPolicy: true
  kind: CronJob
  policy: require-run-as-non-root-user
  resources:
  - goodcronjob01
  - goodcronjob02
  - goodcronjob03
  - goodcronjob04
  - goodcronjob05
  - goodcronjob06
  - goodcronjob07
  - goodcronjob08
  - goodcronjob09
  - goodcronjob10
  - goodcronjob11
  - goodcronjob12
  result: pass
- isValidatingPolicy: true
  kind: Deployment
  policy: require-run-as-non-root-user
  resources:
  - gooddeployment01
  - gooddeployment02
  - gooddeployment03
  - gooddeployment04
  - gooddeployment05
  - gooddeployment06
  - gooddeployment07
  - gooddeployment08
  - gooddeployment09
  - gooddeployment10
  - gooddeployment11
  - gooddeployment12
  result: pass
- isValidatingPolicy: true
  kind: Pod
  policy: require-run-as-non-root-user
  resources:
  - goodpod01
  - goodpod02
  - goodpod03
  - goodpod04
  - goodpod05
  - goodpod06
  - goodpod07
  - goodpod08
  - goodpod09
  - goodpod10
  - goodpod11
  - goodpod12
  - goodpod13
  result: pass
